fixed the overlap issue after using calss navbar-fixed-top by removing css formatting of anchors in static stylesheet

--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -175,9 +175,6 @@ a:visited {
 	color: #ff2222;
 	text-decoration: none;
 	font-family: 'Lato', arial, serif;
-	line-height: 1.5;
-	font-weight: 300;
-	margin: 0 0 10px;
 }
 
 a:hover {
